--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"start": "electron .",
 		"pack": "electron-builder --dir",
 		"dist": "electron-builder --macos --linux --windows",
+		"distwin": "electron-builder --windows",
+		"distmac": "electron-builder --macos",
 		"release": "np"
 	},
 	"dependencies": {
@@ -45,6 +47,9 @@
 	},
 	"build": {
 		"appId": "com.lrcfs.fileRenamer",
+		"win": {
+			"target": "portable"
+		},
 		"mac": {
 			"category": "public.app-category.utilities",
 			"darkModeSupport": true
