--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"description": "Rename files based on metadata",
 	"license": "MIT",
 	"repository": "https://github.com/LRCFS/",
+	"main": "main.js",
 	"author": {
 		"name": "Roy Mudie",
 		"email": "r.z.mudie@dundee.ac.uk",
@@ -22,17 +23,24 @@
 		"release": "np"
 	},
 	"dependencies": {
+		"bootstrap4-toggle": "^3.5.0",
+		"csv-parser": "^2.3.0",
 		"electron-context-menu": "^0.15.0",
 		"electron-debug": "^3.0.0",
 		"electron-store": "^4.0.0",
 		"electron-unhandled": "^3.0.0",
 		"electron-updater": "^4.0.6",
-		"electron-util": "^0.12.0"
+		"electron-util": "^0.12.0",
+		"jquery": "^3.4.1",
+		"jquery-nice-select": "^1.1.0",
+		"xlsx": "^0.15.1"
 	},
 	"devDependencies": {
+		"bootstrap": "^4.3.1",
 		"electron": "^6.0.7",
 		"electron-builder": "^21.2.0",
 		"np": "^5.0.3",
+		"popper.js": "^1.15.0",
 		"xo": "^0.24.0"
 	},
 	"xo": {
