--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"electron-util": "^0.12.0",
 		"jquery": "^3.4.1",
 		"jquery-nice-select": "^1.1.0",
+		"json2csv": "^4.5.3",
 		"underscore": "^1.9.1",
 		"xlsx": "^0.15.1"
 	},
