--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "lrcfs-file-renamer",
 	"productName": "LRCFS File Renamer",
-	"version": "0.0.5",
+	"version": "0.1.0",
 	"description": "Rename files based on metadata",
 	"license": "MIT",
 	"repository": "https://github.com/LRCFS/",
@@ -38,7 +38,8 @@
 		"popper.js": "^1.15.0",
 		"strip-bom-stream": "^4.0.0",
 		"underscore": "^1.9.1",
-		"xlsx": "^0.15.1"
+		"xlsx": "^0.15.1",
+		"electron-progressbar": "^1.2.0"
 	},
 	"devDependencies": {
 		"electron": "^6.0.7",
