Fixed versions for dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "lrcfs-file-renamer",
 	"productName": "LRCFS File Renamer",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"description": "Rename files based on metadata",
 	"license": "MIT",
 	"repository": "https://github.com/LRCFS/",
@@ -24,23 +24,23 @@
 		"release": "np"
 	},
 	"dependencies": {
-		"bootstrap": "^4.3.1",
-		"bootstrap4-toggle": "^3.5.0",
-		"csv-parser": "^2.3.0",
-		"electron-context-menu": "^0.15.0",
-		"electron-debug": "^3.0.0",
-		"electron-store": "^4.0.0",
-		"electron-unhandled": "^3.0.0",
-		"electron-updater": "^4.0.6",
-		"electron-util": "^0.12.0",
-		"jquery": "^3.4.1",
-		"jquery-nice-select": "^1.1.0",
-		"json2csv": "^4.5.3",
-		"popper.js": "^1.15.0",
-		"strip-bom-stream": "^4.0.0",
-		"underscore": "^1.9.1",
-		"xlsx": "^0.15.1",
-		"moment": "^2.24.0"
+		"bootstrap": "4.3.1",
+		"bootstrap4-toggle": "3.5.0",
+		"csv-parser": "2.3.0",
+		"electron-context-menu": "0.15.0",
+		"electron-debug": "3.0.0",
+		"electron-store": "4.0.0",
+		"electron-unhandled": "3.0.0",
+		"electron-updater": "4.0.6",
+		"electron-util": "0.12.0",
+		"jquery": "3.4.1",
+		"jquery-nice-select": "1.1.0",
+		"json2csv": "4.5.3",
+		"popper.js": "1.15.0",
+		"strip-bom-stream": "4.0.0",
+		"underscore": "1.9.1",
+		"xlsx": "0.15.1",
+		"moment": "2.24.0"
 	},
 	"devDependencies": {
 		"electron": "^6.0.7",
