--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "lrcfs-file-renamer",
 	"productName": "LRCFS File Renamer",
-	"version": "0.8.0",
+	"version": "0.9.0",
 	"description": "Rename files based on metadata",
 	"license": "MIT",
-	"repository": "https://github.com/LRCFS/",
+	"repository": "https://github.com/LRCFS/lrcfs-file-renamer",
 	"main": "main.js",
 	"author": {
 		"name": "Roy Mudie",
@@ -36,11 +36,11 @@
 		"jquery": "3.4.1",
 		"jquery-nice-select": "1.1.0",
 		"json2csv": "4.5.3",
+		"moment": "2.24.0",
 		"popper.js": "1.15.0",
 		"strip-bom-stream": "4.0.0",
 		"underscore": "1.9.1",
-		"xlsx": "0.15.1",
-		"moment": "2.24.0"
+		"xlsx": "0.15.1"
 	},
 	"devDependencies": {
 		"electron": "^6.0.7",
