--- a/package.json
+++ b/package.json
@@ -12,16 +12,9 @@
 		"url": "https://www.dundee.ac.uk/leverhulme"
 	},
 	"scripts": {
-		"updateNpmPackages": "npm install",
-		"postinstall": "electron-builder install-app-deps",
-		"lint": "xo",
-		"test": "npm run lint",
 		"start": "electron .",
-		"pack": "electron-builder --dir",
-		"dist": "electron-builder --macos --linux --windows",
 		"distwin": "electron-builder --windows",
-		"distmac": "electron-builder --macos",
-		"release": "np"
+		"distmac": "electron-builder --macos"
 	},
 	"dependencies": {
 		"bootstrap": "4.3.1",
@@ -33,30 +26,18 @@
 		"electron-unhandled": "3.0.0",
 		"electron-updater": "4.0.6",
 		"electron-util": "0.12.0",
-		"jquery": "3.4.1",
+		"jquery": "3.5.0",
 		"jquery-nice-select": "1.1.0",
 		"json2csv": "4.5.3",
 		"moment": "2.24.0",
 		"popper.js": "1.15.0",
 		"strip-bom-stream": "4.0.0",
-		"underscore": "1.9.1",
+		"underscore": "1.12.1",
 		"xlsx": "0.15.1"
 	},
 	"devDependencies": {
-		"electron": "^6.0.7",
-		"electron-builder": "^21.2.0",
-		"np": "^5.0.3",
-		"xo": "^0.24.0"
-	},
-	"xo": {
-		"envs": [
-			"node",
-			"browser"
-		]
-	},
-	"np": {
-		"publish": false,
-		"releaseDraft": false
+		"electron": "9.4.0",
+		"electron-builder": "^21.2.0"
 	},
 	"build": {
 		"appId": "com.lrcfs.fileRenamer",
@@ -81,13 +62,6 @@
 					"path": "/Applications"
 				}
 			]
-		},
-		"linux": {
-			"target": [
-				"AppImage",
-				"deb"
-			],
-			"category": "Network;Chat"
 		}
 	}
 }
